--- a/CoolBootstrapper.Web.Public/index.html
+++ b/CoolBootstrapper.Web.Public/index.html
@@ -14,14 +14,14 @@
     <!-- Libraries -->
 
     <!-- jQuery -->
-    <script language="javascript" type="text/javascript" src="js/lib/jquery.js"></script>
+    <script language="javascript" type="text/javascript" src="/js/lib/jquery.js"></script>
 
     <!-- Tether.io -->
-    <link rel="stylesheet" href="css/lib/tether.css">
+    <link rel="stylesheet" href="/css/lib/tether.css">
     <script language="javascript" type="text/javascript" src="/js/lib/tether.js"></script>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="css/lib/bootstrap.css">
+    <link rel="stylesheet" href="/css/lib/bootstrap.css">
     <script language="javascript" type="text/javascript" src="/js/lib/bootstrap.js"></script>
 
     <!-- p5 Rendering library -->
@@ -30,15 +30,16 @@
 
     <!-- Vue.js -->
     <script language="javascript" type="text/javascript" src="/js/lib/vue.js"></script>
+    <script language="javascript" type="text/javascript" src="/js/lib/vue-router.js"></script>
 
     <!-- Animate.css ... it's great. -->
-    <link rel="stylesheet" href="css/lib/animate.css">
+    <link rel="stylesheet" href="/css/lib/animate.css">
 
     <!-- FontAwesome!  -->
-    <link rel="stylesheet" href="css/lib/font-awesome.css">
+    <link rel="stylesheet" href="/css/lib/font-awesome.css">
 
     <!-- My Style files -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <!-- My javaScripts -->
 
@@ -52,6 +53,7 @@
 </head>
 
 <body>
+
     <!-- BG Filler -->
     <div class="layer darkFilter" style="background:rgba(0,0,0,0.0)"></div>
 
@@ -61,6 +63,7 @@
 
     <!-- Main Container -->
     <div class="" id="mainContent">
+
         <div class="container-fluid">
             
         </div>
